package de.gematik.ti.epa.fdv.authentication.serialization;

/**
 * Interface for handling premarshalled xml output
 */
public interface IPreMarshalledXmlSerializable {
}
